chore: enable-preview for GraalVM 19